<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Money Counter India(INR)</string>
    <string name="action_settings">Settings</string>
    <string name="rs1000"><u>₹ 1,000 </u></string>
    <string name="rs0500"><u>₹ 500 </u></string>
    <string name="rs0100"><u>₹ 100 </u></string>
    <string name="rs0050"><u>₹ 50 </u></string>
    <string name="rs0020"><u>₹ 20 </u></string>
    <string name="rs0010"><u>₹ 10 </u></string>
    <string name="rs0005"><u>₹ 5 </u></string>
    <string name="rs0002"><u>₹ 2 </u></string>
    <string name="rs0001"><u>₹ 1 </u></string>
    <string name="ps0050"><u>₹ 0.5 </u></string>
    <string name="screenshot">Screen shot</string>
    <string name="openFlder">Open the screen shot folder</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="select_file">Please select the file.</string>
    <string name="saveFile">File save</string>
    <string name="selectFile">File list</string>
    <string name="has_been_saved">Has been saved.</string>
    <string name="failed_to_save">Failed to save.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="file">File</string>
    <string name="delete_confirmation">Sure you want to delete?</string>
    <string name="opend_file">Opened the file.</string>
    <string name="file_open_error">File open error</string>
    <string name="please_memo">Please enter the memo. (Optional)</string>
    <string name="del">Delete</string>
    <string name="kind">Kind</string>
    <string name="num">Num</string>
    <string name="sub_total">Subtotal</string>
    <string name="all_clear">Clear</string>
    <string name="total">Total</string>
    <string name="space"></string>
    <string name="all_crear_confirm_title">Initialize confirmation</string>
    <string name="all_crear_confirm_msg">Are you sure you want to clear all?</string>
    <string name="saved_screenshot">saved the screen shot.</string>
    <string name="no_sd_card">does not recognize the SD card.</string>
    <string name="can_not_be_saved">can not be saved.</string>
    <string name="destination">Destination</string>

</resources>